apps/react-weather/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-weather
  labels:
    app: react-weather
spec:
  selector:
    app: react-weather
  ports:
  - name: http
    port: 80
    targetPort: http
